--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-page="/MyNotes">My Notes</a></li>
+                    <li><a asp-page="/Notes/MyNotes">My Notes</a></li>
                 </ul>
                 <partial name="_LoginPartial" />
             </div>
