пытался привязать пользователя к заметке - не вышло даже скостылями

--- a/Pages/Notes/JustNote.cshtml
+++ b/Pages/Notes/JustNote.cshtml
@@ -19,4 +19,8 @@
         <label>body</label><br />
         <p>@Model.Note.Body</p>
     </div>
+    <div>
+        <label>user</label><br />
+        <p>@Model.Note.User</p>
+    </div>
 </form>
